--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 
 
 /**
- * copyright 2022 @codewithsadee
+ * copyright 2024 Alexandr Madibaev
  */
 
 
@@ -70,6 +70,13 @@
     --transition-2: 0.5s ease-in-out;
 }
 
+a {
+    outline: none;
+}
+
+a:focus {
+    outline: none;
+}
 
 /*-----------------------------------*\
   #RESET
@@ -1870,4 +1877,6 @@ textarea.form-input::-webkit-resizer {
     .timeline-text {
         max-width: 700px;
     }
+
+
 }
